--- a/index.html
+++ b/index.html
@@ -12,6 +12,40 @@
 
 <body>
 
+    <header>
+        <a href="#"><img src="https://placehold.it/200x70/ddd" alt="200x70 image"></a>
+        <nav>
+            <ul>
+                <li><a href="#">Nav item 1</a></li>
+                <li><a href="#">Nav item 2</a></li>
+                <li><a href="#">Nav item 3</a></li>
+                <li><a href="#">Nav item 4</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- <main>
+        <div>
+            <img src="https://placehold.it/960x450/ddd" alt="960x450 image">
+        </div>
+        <div>
+            <img src="https://placehold.it/300x375/ddd" alt="300x375 image">
+            <img src="https://placehold.it/300x375/ddd" alt="300x375 image">
+            <img src="https://placehold.it/300x375/ddd" alt="300x375 image">
+        </div>
+        <div>
+            <img src="https://placehold.it/480x400/ddd" alt="480x400 image">
+            <div>
+                <h2>Featured Section Heading</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas inventore saepe facere laborum ab,
+                    similique commodi harum ipsa suscipit veniam voluptates quis sunt odio voluptate laudantium ex
+                    magni,
+                    corporis odit.</p>
+                <button>Call To Action</button>
+            </div>
+
+        </div>
+    </main>
+    <footer></footer> -->
 </body>
 
 </html>
