--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 <body>
 
     <header>
-        <a href="#"><img src="https://placehold.it/200x70/ddd" alt="200x70 image"></a>
         <nav>
+            <img src="https://placehold.it/200x70/ddd" alt="200x70 image">
             <ul>
                 <li><a href="#">Nav item 1</a></li>
                 <li><a href="#">Nav item 2</a></li>
                 <li><a href="#">Nav item 3</a></li>
                 <li><a href="#">Nav item 4</a></li>
+                <p></p>
             </ul>
         </nav>
     </header>
