Finish half of the main

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <!-- <main>
+    <main>
         <div>
             <img src="https://placehold.it/960x450/ddd" alt="960x450 image">
         </div>
@@ -33,7 +33,7 @@
             <img src="https://placehold.it/300x375/ddd" alt="300x375 image">
             <img src="https://placehold.it/300x375/ddd" alt="300x375 image">
         </div>
-        <div>
+        <!-- <div>
             <img src="https://placehold.it/480x400/ddd" alt="480x400 image">
             <div>
                 <h2>Featured Section Heading</h2>
@@ -42,11 +42,11 @@
                     magni,
                     corporis odit.</p>
                 <button>Call To Action</button>
-            </div>
+            </div> -->
 
         </div>
     </main>
-    <footer></footer> -->
+    <!-- <footer></footer> -->
 </body>
 
 </html>
