Finish the project

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#">Nav item 2</a></li>
                 <li><a href="#">Nav item 3</a></li>
                 <li><a href="#">Nav item 4</a></li>
-                <p></p>
+                <span></span>
             </ul>
         </nav>
     </header>
@@ -33,20 +33,48 @@
             <img src="https://placehold.it/300x375/ddd" alt="300x375 image">
             <img src="https://placehold.it/300x375/ddd" alt="300x375 image">
         </div>
-        <!-- <div>
+        <span></span>
+        <div class="child3">
             <img src="https://placehold.it/480x400/ddd" alt="480x400 image">
-            <div>
+            <article>
                 <h2>Featured Section Heading</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas inventore saepe facere laborum ab,
                     similique commodi harum ipsa suscipit veniam voluptates quis sunt odio voluptate laudantium ex
                     magni,
+                    corporis odit.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas inventore saepe facere laborum ab,
+                    similique commodi harum ipsa suscipit veniam voluptates quis sunt odio voluptate laudantium ex
+                    magni,
+                    corporis odit.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas inventore saepe facere laborum ab,
+                    similique commodi harum ipsa suscipit veniam voluptates quis sunt odio voluptate laudantium ex
+                    magni,
+                    corporis odit.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas inventore saepe facere laborum ab,
+                    similique commodi harum ipsa suscipit veniam voluptates quis sunt odio voluptate laudantium ex
+                    magni,
+                    corporis odit.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas inventore saepe facere laborum ab,
+                    similique commodi harum ipsa suscipit veniam voluptates quis sunt odio voluptate laudantium ex
+                    magni,
+                    corporis odit.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas inventore saepe facere laborum ab,
+                    similique commodi harum ipsa suscipit veniam voluptates quis sunt odio voluptate laudantium ex
+                    magni,
+                    corporis odit.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas inventore saepe facere laborum ab,
+                    similique commodi harum ipsa suscipit veniam voluptates quis sunt odio voluptate laudantium ex
+                    magni,
                     corporis odit.</p>
-                <button>Call To Action</button>
-            </div> -->
+                <button> <a href="#">Call To Action</a></button>
+
+                <span></span>
+            </article>
+
 
         </div>
     </main>
-    <!-- <footer></footer> -->
+    <footer></footer>
 </body>
 
 </html>
